--- a/misModule/pom.xml
+++ b/misModule/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>com.hunter.simple.daily.base</module>
         <module>com.hunter.simple.daily.weight</module>
+        <module>com.hunter.simple.daily.web</module>
     </modules>
 
     <dependencies>
