--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,10 @@
             <artifactId>spring-test</artifactId>
             <version>5.2.8.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
     <build>
 
