--- a/misModule/com.hunter.simple.daily.weight/pom.xml
+++ b/misModule/com.hunter.simple.daily.weight/pom.xml
@@ -12,7 +12,11 @@
     <artifactId>com.hunter.simple.daily.weight</artifactId>
     <packaging>${project.packaging}</packaging>
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>2.2.5.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
