--- a/misModule/com.hunter.simple.daily.eureka/src/main/resources/application-dev.yml
+++ b/misModule/com.hunter.simple.daily.eureka/src/main/resources/application-dev.yml
@@ -11,7 +11,7 @@ eureka:
   instance:
     hostname: localhost
   client:
-    registerWithEureka: true
+    registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${spring.security.user.name}:${spring.security.user.password}@${eureka.instance.hostname}:${server.port}/eureka/
