--- a/misModule/com.hunter.simple.daily.weight/src/main/resources/application-dev.properties
+++ b/misModule/com.hunter.simple.daily.weight/src/main/resources/application-dev.properties
@@ -1,1 +1,10 @@
 server.port=9998
+#eureka主机名，会在控制页面中显示
+eureka.instance.hostname=localhost
+#eureka服务器页面中status的请求路径
+eureka.instance.status-page-url=http://localhost:9998/index
+#eureka注册中心服务器地址
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
+#feign.hystrix.enabled=true
+#服务名
+spring.application.name=WEIGHT-MANAGE-SERVER
