--- a/misModule/com.hunter.simple.daily.base/src/main/resources/application-dev.properties
+++ b/misModule/com.hunter.simple.daily.base/src/main/resources/application-dev.properties
@@ -1,8 +1,15 @@
-#\u5FAE\u670D\u52A1\u8BBE\u7F6E
-app.name=ecs_eh_base
 server.port=9999
-server.vipaddress=/ecs/mapp/base
-server.name=ecs_eh_base
+#eureka主机名，会在控制页面中显示
+eureka.instance.hostname=localhost
+#eureka服务器页面中status的请求路径
+eureka.instance.status-page-url=http://localhost:9999/index
+#eureka注册中心服务器地址
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
+#feign.hystrix.enabled=true
+#服务名
+spring.application.name=BASE-SERVER
 
-#\u5B9A\u65F6\u63D0\u9192\u8BBE\u7F6E
-schedule.every5m=0 0/5 * * * ?
+#feign的配置，连接超时及读取超时配置
+feign.client.config.default.connectTimeout= 5000
+feign.client.config.default.readTimeout= 5000
+feign.client.config.default.loggerLevel= basic
