--- a/misModule/com.hunter.simple.daily.weight/src/main/resources/application-dev.properties
+++ b/misModule/com.hunter.simple.daily.weight/src/main/resources/application-dev.properties
@@ -5,6 +5,10 @@ eureka.instance.hostname=localhost
 eureka.instance.status-page-url=http://localhost:9998/index
 #eureka注册中心服务器地址
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
-#feign.hystrix.enabled=true
 #服务名
 spring.application.name=WEIGHT-MANAGE-SERVER
+# feign 配置
+feign.hystrix.enabled=true
+feign.client.config.default.connectTimeout=5000
+feign.client.config.default.readTimeout=5000
+feign.client.config.default.loggerLevel=basic
