--- a/misModule/pom.xml
+++ b/misModule/pom.xml
@@ -20,6 +20,7 @@
         <module>com.hunter.simple.daily.weight</module>
         <module>com.hunter.simple.daily.web</module>
         <module>com.hunter.simple.daily.eureka</module>
+        <module>com.hunter.simple.daily.zuul</module>
     </modules>
 
     <dependencies>
