--- a/baseModule/com.hunter.base.framework/src/main/resources/application-framework.yml
+++ b/baseModule/com.hunter.base.framework/src/main/resources/application-framework.yml
@@ -4,7 +4,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/simple_daily?charset=utf8mb4&useSSL=false&serverTimezone=UTC
     username: root
-    password: password
+    password: root
   redis:
     host: 127.0.0.1
     port: 6379
