1，zuul代理转发规则清晰 2，压测前的准备

--- a/misModule/com.hunter.simple.daily.zuul/src/main/resources/application-dev.properties
+++ b/misModule/com.hunter.simple.daily.zuul/src/main/resources/application-dev.properties
@@ -10,7 +10,13 @@ eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
 spring.application.name=ZUUL-SERVER
 
 # zuul Õ¯πÿ¬∑”…≈‰÷√
+zuul.prefix=/api
+zuul.ignored-headers=Access-Control-Allow-Credentials, Access-Control-Allow-Origin
+
+zuul.routes.base.path= /base/**
+zuul.routes.base.service-id= BASE-SERVER
+zuul.routes.base.stripPrefix= true
+
 zuul.routes.weight.path= /weight/**
 zuul.routes.weight.service-id= WEIGHT-MANAGE-SERVER
-zuul.routes.weight.stripPrefix= false
-zuul.ignored-headers=Access-Control-Allow-Credentials, Access-Control-Allow-Origin
+zuul.routes.weight.stripPrefix= true
