--- a/misModule/com.hunter.simple.daily.web/src/main/resources/application-dev.properties
+++ b/misModule/com.hunter.simple.daily.web/src/main/resources/application-dev.properties
@@ -1,8 +1,9 @@
-#\u5FAE\u670D\u52A1\u8BBE\u7F6E
-app.name=ecs_eh_base
-server.port=80
-server.vipaddress=/ecs/mapp/base
-server.name=ecs_eh_base
-
-#\u5B9A\u65F6\u63D0\u9192\u8BBE\u7F6E
-schedule.every5m=0 0/5 * * * ?
+server.port=8080
+#eureka主机名，会在控制页面中显示
+eureka.instance.hostname=localhost
+#eureka服务器页面中status的请求路径
+eureka.instance.status-page-url=http://localhost:8080/index
+#eureka注册中心服务器地址
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
+#服务名
+spring.application.name=WEB-SERVER
