--- a/baseModule/com.hunter.base.framework/src/main/resources/application-framework.yml
+++ b/baseModule/com.hunter.base.framework/src/main/resources/application-framework.yml
@@ -31,3 +31,20 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
       ddl-auto: update
+  kafka:
+    bootstrap-servers: 192.168.11.10:9092
+feign:
+  hystrix:
+    enabled: false
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
+        loggerLevel: basic
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    service-url:
+      defaultZone: http://localhost:8081/eureka/
