--- a/misModule/com.hunter.simple.daily.base/src/main/resources/application-dev.properties
+++ b/misModule/com.hunter.simple.daily.base/src/main/resources/application-dev.properties
@@ -1,22 +1,9 @@
 spring.application.name=BASE-SERVER
 server.port=9999
 
-#============== kafka 消费者 ===================
-spring.kafka.bootstrap-servers=192.168.11.10:9092
-spring.kafka.consumer.group-id=test-consumer-group
-
-#============== eureka ===================
-# eureka主机名，会在控制页面中显示
-eureka.instance.hostname=localhost
 # eureka服务器页面中status的请求路径(这里应该等于server.port)
 eureka.instance.status-page-url=http://localhost:9999/index
-# eureka注册中心服务器地址
-eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
 
+# kafka 消费者需要配置分组
+spring.kafka.consumer.group-id=test-consumer-group
 
-#============== feign ===================
-#feign.hystrix.enabled=true
-# feign的配置，连接超时及读取超时配置
-feign.client.config.default.connectTimeout= 5000
-feign.client.config.default.readTimeout= 5000
-feign.client.config.default.loggerLevel= basic
