通过kafka消费者的方式存储审计日志调通

--- a/baseModule/com.hunter.base.framework/src/main/resources/application-framework.yml
+++ b/baseModule/com.hunter.base.framework/src/main/resources/application-framework.yml
@@ -33,6 +33,7 @@ spring:
       ddl-auto: update
   kafka:
     bootstrap-servers: 192.168.11.10:9092
+    topic: hunter-test-topic
 feign:
   hystrix:
     enabled: false
