1，删除ActionLog注解内容 2，引入ActionLogStarter内容 3，修改总配置为生产者 4，修改消费服务（base）为消费者 Yes！

--- a/baseModule/com.hunter.base.framework/src/main/resources/application-framework.yml
+++ b/baseModule/com.hunter.base.framework/src/main/resources/application-framework.yml
@@ -1,3 +1,7 @@
+# ActionLog 生产者消息开关
+action:
+  log:
+    open: true
 # 通用数据源配置
 spring:
   datasource:
@@ -32,7 +36,6 @@ spring:
     hibernate:
       ddl-auto: update
   kafka:
-    bootstrap-servers: 192.168.11.10:9092
     topic: hunter-test-topic
 feign:
   hystrix:
