--- a/misModule/com.hunter.simple.daily.base/src/main/resources/application-dev.properties
+++ b/misModule/com.hunter.simple.daily.base/src/main/resources/application-dev.properties
@@ -4,6 +4,7 @@ server.port=9999
 # eureka服务器页面中status的请求路径(这里应该等于server.port)
 eureka.instance.status-page-url=http://localhost:9999/index
 
-# kafka 消费者需要配置分组
+# kafka 消费者配置
+spring.kafka.bootstrap-servers= 192.168.11.10:9092
 spring.kafka.consumer.group-id=test-consumer-group
-
+spring.kafka.topic= hunter-test-topic
